# tox-gh-actions-example

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: test.yml
src/pythonapp/: __init__.py  core.py  version.py
tests/: __init__.py  test_pythonapp.py
