[metadata]
name = tox-gh-actions-example
description = tox and gh actions example 
long_description = file: README.md
long_description_content_type = text/markdown
keywords = virtual, environments, isolated, testing
maintainer = gnusij 
maintainer_email = jisung@duck.com
author = gnusij 
author_email = jisung@duck.com
url = https://github.com/gnusij/tox-gh-actions-example
project_urls =
    Source=https://github.com/gnusij/tox-gh-actions-example
    Tracker=https://github.com/gnusij/tox-gh-actions/issues
platforms = any
license = MIT
license_file = LICENSE
classifiers =
    Framework :: tox
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Libraries
    Topic :: Utilities
    Programming Language :: Python :: 3.9

[options]
packages = find:
package_dir =
  =src
zip_safe = True
python_requires = >=3.9
install_requires = 
    tox
setup_requires =
    # This is for backward compatibility
    # Needs setuptools_scm v5 for Python <3.6
    setuptools_scm[toml] >=5, <7

[options.packages.find]
where = src

[bdist_wheel]
universal = 1

[options.extras_require]
testing =
    nose
    unittest2
    coverage